Implemented ratings on the frontend, updated openapi spec, modified readme file
