# Server/ApiServer/Api/FlashcardSets/Models/CommentDetailResponse.cs
@@ -1,3 +1,4 @@
+using System.Text.Json.Serialization;
 using ApiServer.Domain.Entities;
 
 namespace ApiServer.Api.FlashcardSets.Models;
@@ -9,6 +10,8 @@ public class CommentDetailResponse
 {
     public string Comment { get; private set; }
     
+    [JsonInclude]
+    public int? Rating { get; private set; }
     public User? Author { get; private set; }
     
     public DateTime CreatedAt { get; private set; }
@@ -20,6 +23,7 @@ public class CommentDetailResponse
     public CommentDetailResponse(Comment comment)
     {
         Comment = comment.CommentText;
+        Rating = comment.Rating;
         Author = comment.Author;
         CreatedAt = comment.CreatedAt;
     }
